# linkedin_mcp

./: pyproject.toml
src/: client.py  services.py
src/functions/brightdata/: get_linkedin_profile.py  get_linkedin_profile_posts.py  get_linkedin_profile_reactions.py
src/workflows/brightdata/: get_linkedin_profile.py  get_linkedin_profile_posts.py  get_linkedin_profile_reactions.py
src/workflows/linkedin/: create_post.py
src/workflows/phantombuster/: get_linkedin_profile.py  get_linkedin_profile_posts.py  get_linkedin_profile_reactions.py  save_linkedin_lead.py
